--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-logo: /assets/img/headshot2.png
-title: K. Colin Li (he/him)
-description: PhD Student | Mixed-Methods Researcher
+logo: /assets/img/tiana.png
+title: Tiana (she/her)
+description: University of Toronto Undergrad
 show_downloads: false
 theme: jekyll-theme-minimal
